feat(login):login user with email and password -user should login using correct email and password -user can get a token contains id, name, role, username and email -the token should not contain password
[Finishes  #17563684]

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,5 +1,12 @@
 {
 	"successfully sent query": "Requète a été envoyée",
 	"successfully sent": "Envoyé",
-    "welcome": "Bienvenue sur Barefoot Nomad"
-    }
+	"welcome": "Bienvenue sur Barefoot Nomad",
+	"successfully logged in": "connecté avec succès",
+	"Email not found": "Email non trouvé",
+	"Your account has not been verified": "Votre compte n'a pas été vérifié",
+	"Wrong Password": "Mauvais mot de passe",
+	"Email is required": "Email est requis",
+	"Password is required": "Mot de passe requis",
+	"Password must be in the range of 6 to 15 characters": "Le mot de passe doit être compris entre 6 et 15 caractères"
+}
