ft(notification): handle email and in-app notification
create model for notifications
create service for saving notification
write multiple language translations
write tests
create util for sending notification email
add routes for toggling email and in-app notification status

[Finishes #175636861]

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,4 +1,5 @@
 {
+	"User log in successful": "Connexion utilisateur réussie",
 	"Successfully sent query": "Requète a été envoyée",
 	"Successfully sent": "Envoyé",
 	"welcome": "Bienvenue sur Barefoot Nomad",
