--- a/locales/ki.json
+++ b/locales/ki.json
@@ -1,4 +1,5 @@
 {
+  "User log in successful": "Kwinjira byagenze neza",
   "Successfully sent query": "Ubutumwa bwoherejwe neza",
   "Successfully sent": "Igikorwa cyagenze neza",
   "welcome": "Murakaza neza kuri Barefoot Nomad",
