ft(notification): notify on trip request edit
create model for notifications
create service for saving notification
write multiple language translations
write tests
create util for sending notification email

[Finishes #175636861]

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,6 @@
 {
 	"successfully sent query": "Successfully sent query",
 	"successfully sent": "Successfully sent",
-    "welcome": "Welcome to Barefoot Nomad"
-    }
+    "welcome": "Welcome to Barefoot Nomad",
+    "User log in successful": "User log in successful"
+}
