--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,5 +1,6 @@
 {
-	"successfully sent query": "Requète a été envoyée",
-	"successfully sent": "Envoyé",
-    "welcome": "Bienvenue sur Barefoot Nomad"
-    }
+    "successfully sent query": "Requète a été envoyée",
+    "successfully sent": "Envoyé",
+    "welcome": "Bienvenue sur Barefoot Nomad",
+    "User log in successful": "Connexion utilisateur réussie"
+}
