--- a/locales/ki.json
+++ b/locales/ki.json
@@ -1,5 +1,6 @@
 {
-	"successfully sent query": "Ubutumwa bwoherejwe neza",
-	"successfully sent": "Igikorwa cyagenze neza",
-    "welcome": "Murakaza neza kuri Barefoot Nomad"
-    }
+    "successfully sent query": "Ubutumwa bwoherejwe neza",
+    "successfully sent": "Igikorwa cyagenze neza",
+    "welcome": "Murakaza neza kuri Barefoot Nomad",
+    "User log in successful": "Kwinjira byagenze neza"
+}
