feat(role-setting): add userRole setting in the system
 - create superAdministrator(IT stuff) role
 - add functionality for superAdministrator to assign roles to users using their emails
 - add functionality for superAdministrator to update or delete roles of users

[Finishes #175636852]

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -9,8 +9,26 @@
 	"Email is required": "Email est requis",
 	"Password is required": "Mot de passe requis",
 	"Password must be in the range of 6 to 15 characters": "Le mot de passe doit être compris entre 6 et 15 caractères",
-    "updatedSuccessfully": "Informations de profil mises à jour avec succès",
-    "updateFailed": "Mise à jour a échoué, essayez à nouveau plus tard.",
-    "userNameTaken": "Nom d’utilisateur a été pris",
-    "userNotFound": "Utilisateur non trouvé"   
+	"updatedSuccessfully": "Informations de profil mises à jour avec succès",
+	"updateFailed": "Mise à jour a échoué, essayez à nouveau plus tard.",
+	"userNameTaken": "Nom d’utilisateur a été pris",
+	"userNotFound": "Utilisateur non trouvé",
+	"Enter the role": "Entrez le rôle",
+	"Enter the email": "Entrez l'email",
+	"role is successifully assigned": "le rôle est attribué avec succès",
+	"Select the role": "Sélectionnez le rôle",
+	"roles are fetched successfully": "les rôles sont récupérés avec succès",
+	"role deleted successfully": "rôle supprimé avec succès",
+	"The is role updated successfully": "Le rôle est mis à jour avec succès",
+	"role was fetched successfully": "le rôle a été récupéré avec succès",
+	"That role already exist in the system": "Ce rôle existe déjà dans le système",
+	"Role is created in the system": "Le rôle est créé dans le système",
+	"The role doesn't exist in the system": "Le rôle n'existe pas the le system",
+	"User with that email does not exist in the system": "User with that email does not exist in the system",
+	"the role with that Id does not exist": "le rôle avec cet identifiant n'existe pas",
+	"SUPER_ADMIN role cannot be deleted": "Le rôle SUPER_ADMIN ne peut pas être supprimé",
+	"SUPER_ADMIN role cannot be updated": "Le rôle SUPER_ADMIN ne peut pas être mis à jour",
+	"You are not Super Admin to perform this action": "Vous n'êtes pas un super administrateur pour effectuer cette action",
+	"Please login": "Veuillez vous connecter",
+	"Unauthorized": "Non autorisé"
 }
