ft(booking):user book an accomodation create booking model create accomodation model create room model [(finishes) #175636867]

--- a/locales/en.json
+++ b/locales/en.json
@@ -32,5 +32,6 @@
 	"User with that email does not exist in the system": "User with that email does not exist in the system",
 	"Unauthorized": "Unauthorized",
 	"Please login": "Please login",
-	"You are not Super Admin to perform this action": "You are not Super Admin to perform this action"
+	"You are not Super Admin to perform this action": "You are not Super Admin to perform this action",
+	"User logged in successfully": "User logged in successfully"
 }
