ft(manage accommodation facilities):crud-accommodations
  - add functionality for Travel Administrator to create, read, update and delete accommodations
  - add functionality for Travel Administrator to create, read, update and delete rooms in a specific accommodation

[Finishes #175636862]

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,92 +1,136 @@
 {
-	  "role is successfully assigned": "role is successfully assigned",
-	  "Request submitted": "Request submitted",
-	  "There is no such request!": "There is no such request!",
-	  "Request updated!": "Request updated!",
-	  "Request deleted": "Request deleted",
-	  "errorOnCreate": "Request is not processed, try again!",
-	  "errorOnGet": "No requests available!",
-	  "errorOnUpdate": "There is no such request!",
-	  "ErrorIfNonPending": "Only open requests can be updated",
-	  "errorOnDelete": "There is no such request!",
-	  "Successfully sent query": "Successfully sent query",
-	  "Successfully sent": "Successfully sent",
-	  "welcome": "Welcome to Barefoot Nomad",
-	  "You signed up successfully": "You signed up successfully",
-	  "This Email is in use": "This Email is in use",
-	  "This Username is in use": "This Username is in use",
-	  "A verification email has been sent to ": "A verification email has been sent to ",
-	  "The account has been verified. Please log in.": "The account has been verified. Please log in.",
-	  "This user has already been verified.": "This user has already been verified.",
-	  "We are unable to find a user with that email!": "we are unable to find a user with that email!",
-	  "This account has  already been verified.Please log In": "This account has  already been verified.Please log In",
-	  "No account associated to this email": "no account associated to this email",
-	  "The link to reset password sent succesfully to your email!": "The link to reset password sent succesfully to your email!",
-	  "Wrong Password": "Wrong Password",
-	  "Password don't match": "password don't match",
-	  "Password updated succesfully!": "password updated succesfully!",
-	  "Confirmation email resend succesfully!": "confirmation email resend succesfully!",
-	  "Email is required": "Email is required",
-	  "Password is required": "Password is required",
-	  "Fullname is required": "Fullname is required",
-	  "Your account has not been verified": "Your account has not been verified",
-	  "Email not found": "Email not found",
-	  "User logged in successfully": "user logged in successfully",
-	  "Username is required": "username is required",
-	  "Username must be in the range of 6 to 15 characters": "username must be in the range of 6 to 15 characters",
-	  "ConfirmPassword is required": "ConfirmPassword is required",
-	  "Sign up": "You signed up successfully",
-	  "Duplicate Email": "This Email is in use",
-	  "Account Exist": "This account with this email already exist",
-	  "Password must be in the range of 6 to 15 characters": "Password must be in the range of 6 to 15 characters",
-	  "updatedSuccessfully": "Profile information updated successfully",
-	  "updateFailed": "Updating failed, try again later.",
-	  "userNameTaken": "Username has been taken",
-	  "userNotFound": "User not found",
-	  "Enter the role": "Enter the role",
-	  "Enter the email": "Enter the email",
-	  "Enter the name of role": "Enter the name of role",
-	  "Describe the role please": "Describe the role please",
-	  "That role already exist in the system": "That role already exist in the system",
-	  "roles are fetched successfully": "roles are fetched successfully",
-	  "Select the role": "Select the role",
-	  "Role is created in the system": "Role is created in the system",
-	  "role is successifully assigned": "role is successifully assigned",
-	  "the role with that Id does not exist": "the role with that Id does not exist",
-	  "The role doesn't exist in the system": "The role doesn't exist in the system",
-	  "role deleted successfully": "role deleted successfully",
-	  "The is role updated successfully": "The is role updated successfully",
-	  "role was fetched successfully": "role was fetched successfully",
-	  "SUPER_ADMIN cannot be deleted": "SUPER_ADMIN cannot be deleted",
-	  "SUPER_ADMIN role cannot be updated": "SUPER_ADMIN role cannot be updated",
-	  "SUPER_ADMIN role cannot be deleted": "SUPER_ADMIN role cannot be deleted",
-	  "User with that email does not exist in the system": "User with that email does not exist in the system",
-	  "Unauthorized": "Unauthorized",
-	  "Please login": "Please login",
-	  "You are not Super Admin to perform this action": "You are not Super Admin to perform this action",
-	  "tripRequestSubmitted": "Trip request submitted",
-	  "tripRequestFailedWrongUserToken": "Wrong user token, please try again",
-	  "You've not made any requests!": "You've not made any requests!",
-	  "Invalid comment": "Invalid comment",
-	  "Comment submitted": "Comment submitted",
-	  "Request not Found": "Request not Found",
-	  "Server Error": "Server Error",
-	  "Comment deleted": "Comment deleted",
-	  "This is not a valid email address format ": "this is not a valid email address format ",
-	  "User Not Found": "User Not Found",
-	  "Requested user": "Requested user",
-	  "Updated Successfully": "Updated Successfully",
-	  "Update Failed": "Update Failed",
-	  "User Name Taken": "User Name Taken",
-	  "Username has been taken": "Username has been taken",
-	  "email": "email",
-	  "password updated succesfully!": "password updated succesfully!",
-	  "password don't match": "password don't match",
-	  "confirmation email resend succesfully!": "confirmation email resend succesfully!",
-	  "fullname is required": "fullname is required",
-	  "we are unable to find a user with that email!": "we are unable to find a user with that email!",
-	  "Username in use": "Username in use",
-	  "username is required": "username is required",
-	  "invalidDepartureDate": "Departure date must be greater than today's date",
-	  "invalidReturnDate": "Return date must be greater than departure date"
-  }
+	"Sign up": "You signed up successfully",
+	"Duplicate Email": "This Email is in use",
+	"Account Exist": "This account with this email already exist",
+	"Select the role": "Select the role",
+	"You've not made any requests!": "You've not made any requests!",
+	"invalidDepartureDate": "Departure date must be greater than today's date",
+	"invalidReturnDate": "Return date must be greater than departure date",
+	"Successfully sent": "Successfully sent",
+	"welcome": "Welcome to Barefoot Nomad",
+	"You signed up successfully": "You signed up successfully",
+	"This Email is in use": "This Email is in use",
+	"This Username is in use": "This Username is in use",
+	"A verification email has been sent to ": "A verification email has been sent to ",
+	"The account has been verified. Please log in.": "The account has been verified. Please log in.",
+	"This user has already been verified.": "This user has already been verified.",
+	"We are unable to find a user with that email!": "we are unable to find a user with that email!",
+	"This account has  already been verified.Please log In": "This account has  already been verified.Please log In",
+	"No account associated to this email": "no account associated to this email",
+	"The link to reset password sent succesfully to your email!": "The link to reset password sent succesfully to your email!",
+	"Wrong Password": "Wrong Password",
+	"Password don't match": "password don't match",
+	"Password updated succesfully!": "password updated succesfully!",
+	"Confirmation email resend succesfully!": "confirmation email resend succesfully!",
+	"Email is required": "Email is required",
+	"Password is required": "Password is required",
+	"Fullname is required": "Fullname is required",
+	"Your account has not been verified": "Your account has not been verified",
+	"Email not found": "Email not found",
+	"User logged in successfully": "user logged in successfully",
+	"Username is required": "username is required",
+	"Username must be in the range of 6 to 15 characters": "username must be in the range of 6 to 15 characters",
+	"ConfirmPassword is required": "ConfirmPassword is required",
+	"Password must be in the range of 6 to 15 characters": "Password must be in the range of 6 to 15 characters",
+	"updatedSuccessfully": "Profile information updated successfully",
+	"updateFailed": "Updating failed, try again later.",
+	"userNameTaken": "Username has been taken",
+	"userNotFound": "User not found",
+	"Enter the role": "Enter the role",
+	"Enter the email": "Enter the email",
+	"Enter the name of role": "Enter the name of role",
+	"Describe the role please": "Describe the role please",
+	"That role already exist in the system": "That role already exist in the system",
+	"roles are fetched successfully": "roles are fetched successfully",
+	"Role is created in the system": "Role is created in the system",
+	"role is successifully assigned": "role is successifully assigned",
+	"the role with that Id does not exist": "the role with that Id does not exist",
+	"The role doesn't exist in the system": "The role doesn't exist in the system",
+	"role deleted successfully": "role deleted successfully",
+	"The is role updated successfully": "The is role updated successfully",
+	"role was fetched successfully": "role was fetched successfully",
+	"SUPER_ADMIN cannot be deleted": "SUPER_ADMIN cannot be deleted",
+	"SUPER_ADMIN role cannot be updated": "SUPER_ADMIN role cannot be updated",
+	"SUPER_ADMIN role cannot be deleted": "SUPER_ADMIN role cannot be deleted",
+	"User with that email does not exist in the system": "User with that email does not exist in the system",
+	"Unauthorized": "Unauthorized",
+	"Please login": "Please login",
+	"You are not Super Admin to perform this action": "You are not Super Admin to perform this action",
+	"tripRequestSubmitted": "Trip request submitted",
+	"tripRequestDeniedWhenAnotherOpenRequest": "Trip request has been denied due to another open request",
+	"Invalid comment": "Invalid comment",
+	"Comment submitted": "Comment submitted",
+	"Request not Found": "Request not Found",
+	"Server Error": "Server Error",
+	"Comment deleted": "Comment deleted",
+	"This is not a valid email address format ": "this is not a valid email address format ",
+	"User Not Found": "User Not Found",
+	"Requested user": "Requested user",
+	"Updated Successfully": "Updated Successfully",
+	"Update Failed": "Update Failed",
+	"User Name Taken": "User Name Taken",
+	"Username has been taken": "Username has been taken",
+	"email": "email",
+	"password updated succesfully!": "password updated succesfully!",
+	"password don't match": "password don't match",
+	"confirmation email resend succesfully!": "confirmation email resend succesfully!",
+	"fullname is required": "fullname is required",
+	"we are unable to find a user with that email!": "we are unable to find a user with that email!",
+	"Username in use": "Username in use",
+	"username is required": "username is required",
+	"tripRequestFailedWrongUserToken": "You are unauthorized to make a trip request, please first login.",
+	"role is successfully assigned": "role is successfully assigned",
+	"Request submitted": "Request submitted",
+	"There is no such request!": "There is no such request!",
+	"Request updated!": "Request updated!",
+	"Request deleted": "Request deleted",
+	"errorOnCreate": "Request is not processed, try again!",
+	"errorOnGet": "No requests available!",
+	"errorOnUpdate": "There is no such request!",
+	"ErrorIfNonPending": "Only open requests can be updated",
+	"errorOnDelete": "There is no such request!",
+	"Successfully sent query": "Successfully sent query",
+	"This accommodation doesn't exist": "This accommodation doesn't exist",
+	"Accommodation created successfully": "Accommodation created successfully",
+	"No available accommodations": "No available accommodations",
+	"Name should be string": "Name should be string",
+	"Name input can't be empty": "Name input can't be empty",
+	"Name property is required": "Name property is required",
+	"Location should be string": "Location should be string",
+	"Location input can't be empty": "Location input can't be empty",
+	"Location should be provided": "Location should be provided",
+	"Description should be of type string": "Description should be of type string",
+	"Please, provide meaningful description": "Please, provide meaningful description",
+	"At least one room is required": "At least one room is required",
+	"Please provide a valid url": "Please provide a valid url",
+	"Provide image for your accomodation": "Provide image for your accomodation",
+	"Image is required": "Image is required",
+	"accommodationType should be string": "accommodationType should be string",
+	"accommodationType input can't be empty": "accommodationType input can't be empty",
+	"accommodationTypeproperty is required": "accommodationTypeproperty is required",
+	"location should be string": "location should be string",
+	"location input can't be empty": "location input can't be empty",
+	"location should be provided": "location should be provided",
+	"Accommodation type is required": "Accommodation type is required",
+	"Location is required": "Location is required",
+	"photo url is required": "photo url is required",
+	"facilities are required": "facilities are required",
+	"Price is required": "Price is required",
+	"RoomNumberare required": "RoomNumberare required",
+	"Facilities are required": "Facilities are required",
+	"Accomodation successfully updated": "Accomodation successfully updated",
+	"The accommodation name already exists please!!!!!": "The accommodation name already exists please!!!!!",
+	"Accommodation Exist, please update instead": "Accommodation Exist, please update instead",
+	"Hotel already exist, update the existing one": "Hotel already exist, update the existing one",
+	"Kabuga already exist, update the existing one": "Kabuga already exist, update the existing one",
+	"Room updated successfully": "Room updated successfully",
+	"Room deleted successfully": "Room deleted successfully",
+	"username must be in the range of 6 to 15 characters": "username must be in the range of 6 to 15 characters",
+	"You are not Travel administrator": "You are not Travel administrator",
+	"Kabuga1 already exist, update the existing one": "Kabuga1 already exist, update the existing one",
+	"Accommodation with that id doesn't exist": "Accommodation with that id doesn't exist",
+	"Accommodation deleted successfully": "Accommodation deleted successfully",
+	"Room you need to delete doesn't exist": "Room you need to delete doesn't exist",
+	"Kabuga3 already exist, update the existing one": "Kabuga3 already exist, update the existing one",
+	" You are not  Travel administrator to manipulate accommodations": " You are not  Travel administrator to manipulate accommodations"
+}
