--- a/locales/fr.json
+++ b/locales/fr.json
@@ -82,5 +82,40 @@
 	"tripRequestSubmitted": "La demande de voyage a été soumise.",
 	"invalidDepartureDate": "La date de départ doit être postérieure à la date d'aujourd'hui",
 	"invalidReturnDate": "La date de retour doit être supérieure à la date de départ",
-	"You've not made any requests!": "Vous n’avez fait aucune demande!"
+	"You've not made any requests!": "Vous n’avez fait aucune demande!",
+	"This accommodation doesn't exist": "Cet hébergement n'existe pas",
+	"Accommodation created successfully": "Hébergement créé avec succès",
+	"No available accommodations": "Aucun hébergement disponible",
+	"Name should be string": "Le nom doit être une chaîne",
+	"Name input can't be empty": "L'entrée du nom ne peut pas être vide",
+	"Name property is required": "La propriété de nom est requise",
+	"Location should be string": "L'emplacement doit être une chaîne",
+	"Location input can't be empty": "L'entrée de l'emplacement ne peut pas être vide",
+	"Location should be provided": "L'emplacement doit être fourni",
+	"Description should be of type string": "La description doit être de type chaîne",
+	"Please, provide meaningful description": "Veuillez fournir une description significative",
+	"At least one room is required": "Au moins une pièce est requise",
+	"Please provide a valid url": "Veuillez fournir une URL valide",
+	"Provide image for your accomodation": "Donnez une image de votre logement",
+	"Image is required": "L'image est requise",
+	"accommodationType should be string": "accommodationType doit être une chaîne",
+	"accommodationType input can't be empty": "L'entrée accommodationType ne peut pas être vide",
+	"accommodationTypeproperty is required": "accommodationTypeproperty is required",
+	"location should be string": "l'emplacement doit être une chaîne",
+	"location input can't be empty": "l'entrée de l'emplacement ne peut pas être vide",
+	"location should be provided": "l'emplacement doit être fourni",
+	"Accommodation type is required": "Accommodation type is required",
+	"Location is required": "Location is required",
+	"photo url is required": "photo url is required",
+	"facilities are required": "des installations sont nécessaires",
+	"Price is required": "Le prix est obligatoire",
+	"RoomNumberare required": "RoomNumber sont requis",
+	"Facilities are required": "Les installations sont nécessaires",
+	"Accomodation successfully updated": "Logement mis à jour avec succès",
+	"The accommodation name already exists please!!!!!": "Le nom du logement existe déjà !!!!!",
+	"Accommodation Exist, please update instead": "L'hébergement existe, veuillez plutôt mettre à jour",
+	"Hotel already exist, update the existing one": "L'hôtel existe déjà, mettez à jour l'existant",
+	"Kabuga already exist, update the existing one": "Kabuga existe déjà, mettez à jour l'existant",
+	"Room updated successfully": "Salle mise à jour avec succès",
+	"Room deleted successfully": "Salle supprimée avec succès"
 }
