--- a/locales/ki.json
+++ b/locales/ki.json
@@ -83,5 +83,40 @@
 	"Request not Found": "Ubusabe ntibubonetse",
 	"Server Error": "Ni ikibazo cyo kuri seriveri",
   "Comment deleted": "Comment yasibwe",
-  "You've not made any requests!": "Ntimurasaba na rimwe kujya mu rugendo!"	
+  "You've not made any requests!": "Ntimurasaba na rimwe kujya mu rugendo!",
+	"This accommodation doesn't exist": "Amacumbi ntabwo abaho",
+	"Accommodation created successfully": "Amacumbi yaremye neza",
+	"No available accommodations": "Nta macumbi ahari",
+	"Name should be string": "Izina rigomba kuba umurongo",
+	"Name input can't be empty": "Izina ryinjiza ntirishobora kuba ubusa",
+	"Name property is required": "Amazina yumutungo arakenewe",
+	"Location should be string": "Ikibanza kigomba kuba umurongo",
+	"Location input can't be empty": "Ibibanza byinjira ntibishobora kuba ubusa",
+	"Location should be provided": "Ikibanza kigomba gutangwa",
+	"Description should be of type string": "Ibisobanuro bigomba kuba byubwoko bwumugozi",
+	"Please, provide meaningful description": "Nyamuneka, tanga ibisobanuro bifatika",
+	"At least one room is required": "Nibura icyumba kimwe kirakenewe",
+	"Please provide a valid url": "Nyamuneka tanga url yemewe",
+	"Provide image for your accomodation": "Tanga ishusho ya incomodation yawe",
+	"Image is required": "Ishusho irakenewe",
+	"accommodationType should be string": "icumbi Ubwoko bugomba kuba umurongo",
+	"accommodationType input can't be empty": "icumbi Ubwoko bwinjiza ntibushobora kuba ubusa",
+	"accommodationTypeproperty is required": "accommodationTypeproperty is required",
+	"location should be string": "Ikibanza kigomba kuba umurongo",
+	"location input can't be empty": "ikibanza cyinjiza ntigishobora kuba ubusa",
+	"location should be provided": "ikibanza kigomba gutangwa",
+	"Accommodation type is required": "Ubwoko bw'amacumbi burakenewe",
+	"Location is required": "Ikibanza kirakenewe",
+	"photo url is required": "ifoto url irakenewe",
+	"facilities are required": "ibikoresho birakenewe",
+	"Price is required": "Igiciro kirakenewe",
+	"RoomNumberare required": "RoomNumberare required",
+	"Facilities are required": "Ibikoresho birakenewe",
+	"Accomodation successfully updated": "Accomodation ivugururwa neza",
+	"The accommodation name already exists please!!!!!": "Izina ryamacumbi rimaze kubaho nyamuneka !!!!!",
+	"Accommodation Exist, please update instead": "Amacumbi arahari, nyamuneka kuvugurura aho",
+	"Hotel already exist, update the existing one": "Hotel isanzweho, vugurura iyariho",
+	"Kabuga already exist, update the existing one": "Kabuga isanzweho, vugurura iyariho",
+	"Room updated successfully": "Icyumba cyavuguruwe neza",
+	"Room deleted successfully": "Icyumba cyasibwe neza"
 }
