feat(tripRequest): multicity trip request route and get trip requests route by id.
add route for making a multi city trip request
add route that retrieve trip requests by user id.

[delivers #175636850]

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -35,14 +35,18 @@
 	"userNotFound": "Utilisateur non trouvé",
 	"Enter the role": "Entrez le rôle",
 	"Enter the email": "Entrez l'email",
+	"Enter the name of role": "Entrez le nom du rôle",
+	"Describe the role please": "Décrivez le rôle s’il vous plaît",
 	"role is successifully assigned": "le rôle est attribué avec succès",
-	"Select the role": "Sélectionnez le rôle",
 	"roles are fetched successfully": "les rôles sont récupérés avec succès",
+	"Select the role": "Sélectionnez le rôle",
 	"role deleted successfully": "rôle supprimé avec succès",
 	"The is role updated successfully": "Le rôle est mis à jour avec succès",
 	"role was fetched successfully": "le rôle a été récupéré avec succès",
+	"SUPER_ADMIN cannot be deleted": "SUPER_ADMIN ne peuvent pas être supprimés",
 	"That role already exist in the system": "Ce rôle existe déjà dans le système",
 	"Role is created in the system": "Le rôle est créé dans le système",
+	"role is successfully assigned": "rôle est attribué avec succès", 
 	"The role doesn't exist in the system": "Le rôle n'existe pas the le system",
 	"User with that email does not exist in the system": "User with that email does not exist in the system",
 	"the role with that Id does not exist": "le rôle avec cet identifiant n'existe pas",
@@ -63,7 +67,6 @@
 	"Update Failed": "Mise à jour a échoué",
 	"Username has been taken": "Le nom d'utilisateur a été pris",
 	"email": "email",
-	"role is successfully assigned": "rôle est attribué avec succès",
 	"There is no such request!": "Il n’y a pas une telle demande!",
 	"Request submitted": "Demande soumise",
 	"Request updated!": " Demande mise à jour !",
@@ -78,5 +81,6 @@
     "tripRequestDeniedWhenAnotherOpenRequest": "Demande refusée, vous avez une autre demande ouverte.",
 	"tripRequestSubmitted": "La demande de voyage a été soumise.",
 	"invalidDepartureDate": "La date de départ doit être postérieure à la date d'aujourd'hui",
-	"invalidReturnDate": "La date de retour doit être supérieure à la date de départ"
+	"invalidReturnDate": "La date de retour doit être supérieure à la date de départ",
+	"You've not made any requests!": "Vous n’avez fait aucune demande!"
 }
